Name:                acme-sip
Version:             0.1
Synopsis:            fastest Haskell SIP echo server in the world
Description:         winning the echo benchmark at all costs
License:             BSD3
License-file:        LICENSE
Author:              Joe Hillenbrand
Maintainer:          joehillen@gmail.com
Copyright:           2012 Jeremy Shaw, SeeReason Partners LLC
Homepage:            https://github.com/joehillen/acme-sip
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.6

source-repository head
    type:     git
    location: https://github.com/joehillen/acme-sip.git

Library
  Exposed-modules:   Acme.Response
                     Acme.Request
                     Acme.Serve
                     Acme.Types

  Build-depends:     base                   < 5,
                     bytestring            == 0.9.*,
                     extensible-exceptions == 0.1.*,
                     mtl                   == 2.0.*,
                     network               >= 2.3 && <2.5,
                     pretty                >= 1.0 && <1.2,
                     containers            >= 0.5.2.1

  GHC-Options: -O2

Executable sip-echo
  Main-Is: Echo.hs
  GHC-Options: -threaded -O2


